release candidate 2 (28.7.2021 - DD.MM.YYYY)

- Independance from pacstrap ... wooo!
- Arnix is now 100% POSIX compliant

---
past releases see commit log (I a too lazy to add them here)