@@ -19,7 +19,7 @@ _branch_preset=stable
 # Link to the bootstrap tar
 _update_source=https://github.com/germanbread/arnix/releases/latest/download/arnix-bootstrap.tar.gz
 # Version info
-_arnix_version=2021-v1-rc2
+_arnix_version=2021-v1-rc3
 
 #
 #   INIT CONFIG
